# Bayesian-Nonparametric-Graph-Pooling

./: .gitignore  LICENSE  README.md  environment.yml  minimal_example.py  pyproject.toml  run_classification.py  run_clustering.py
config/: default.yaml  run_classification.yaml  run_clustering.yaml  test_classification.yaml  test_clustering.yaml
config/architecture/: classification.yaml  clustering.yaml
config/dataset/: NCI1.yaml  bench-hard.yaml  citeseer.yaml  collab.yaml  colors.yaml  community.yaml  cora.yaml  dblp.yaml  dd.yaml  enzymes.yaml  imdb-b.yaml  molhiv.yaml  multipartite.yaml  mutag.yaml  mutagenicity.yaml  pep-s.yaml  proteins.yaml  pubmed.yaml  reddit-b.yaml  sbm.yaml
config/lr_scheduler/: cyclic.yaml  redplat.yaml
config/optimizer/: adam_lr0.01_cos_etamin_0.yaml
config/pooler/: bnpool.yaml  bnpool_sparse.yaml  diff.yaml  diffpool.yaml  dmon.yaml  ec.yaml  eigen.yaml  hosc.yaml  jb.yaml  justbalance.yaml  kmis.yaml  mincut.yaml  sep.yaml
source/data/: __init__.py  data_modules.py  torch_datasets.py  tu.py
source/layers/: bnpool.py
source/layers/edgepool/: edge_pool.py
source/models/: __init__.py  _pooling.py  classification_models.py  clustering_models.py  molhiv_model.py
source/pl_modules/: __init__.py  base_module.py  classification_module.py  clustering_module.py
source/utils/: __init__.py  data.py  metrics.py  misc.py  schedulers.py  tensorboard.py
