[project]
name = "bayesian-pooling"
version = "0.1.0"
description = "Reproducibility code for BNPool experiments built on torch-geometric-pool."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "hydra-core==1.3.2",
    "lightning==2.6.1",
    "numpy==1.26.4",
    "ogb==1.3.6",
    "omegaconf==2.3.0",
    "pygsp==0.6.1",
    "scikit-learn==1.8.0",
    "tensorboard==2.20.0",
    "torch==2.4.1",
    "torch-cluster==1.6.3",
    "torch-geometric==2.6.1",
    "torch-geometric-pool==1.0.0",
    "torch-scatter==2.1.2",
    "torch-sparse==0.6.18",
    "torchmetrics==1.9.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pyg-cpu"
url = "https://data.pyg.org/whl/torch-2.4.0+cpu.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pyg-cu121"
url = "https://data.pyg.org/whl/torch-2.4.0+cu121.html"
format = "flat"
explicit = true

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-scatter = ["torch"]
torch-sparse = ["torch"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torch-cluster = [
    { index = "pyg-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pyg-cpu", marker = "sys_platform == 'win32'" },
    { index = "pyg-cu121", marker = "sys_platform == 'linux'" },
]
torch-scatter = [
    { index = "pyg-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pyg-cpu", marker = "sys_platform == 'win32'" },
    { index = "pyg-cu121", marker = "sys_platform == 'linux'" },
]
torch-sparse = [
    { index = "pyg-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pyg-cpu", marker = "sys_platform == 'win32'" },
    { index = "pyg-cu121", marker = "sys_platform == 'linux'" },
]
